force-app/main/default/objects/Employee__c/fields/Available_vacation_days__c.field-meta.xml
<CustomField>
    <fullName>Available_vacation_days__c</fullName>
    <formula>(365 -  DAYOFYEAR(TODAY()) )/15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available vacation days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>