force-app/main/default/objects/Employee__c/fields/Count_of_bugets__c.field-meta.xml
<CustomField>
    <fullName>Count_of_bugets__c</fullName>
    <label>Count of bugets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>