force-app/main/default/objects/Employee__c/fields/Current_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>