force-app/main/default/objects/Employee__c/fields/Current_Project__c.field-meta.xml
<CustomField>
    <fullName>Current_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>