force-app/main/default/objects/Employee__c/fields/First_day_in_the_company__c.field-meta.xml
<CustomField>
    <fullName>First_day_in_the_company__c</fullName>
    <label>First day in the company</label>
    <required>true</required>
    <type>Date</type>
</CustomField>