force-app/main/default/objects/Employee__c/validationRules/Date_of_Birth_cant_be_older_then_todey.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_cant_be_older_then_todey</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  Date_of_birth__c &gt; TODAY() ,true ,false)</errorConditionFormula>
    <errorDisplayField>Date_of_birth__c</errorDisplayField>
    <errorMessage>Date cant be older then today</errorMessage>
</ValidationRule>