force-app/main/default/objects/Employee__c/validationRules/Speciality_field_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Speciality_field_required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( Current_Company__c ) , false, if( ISBLANK( Specialty__c ), true, false ))</errorConditionFormula>
    <errorDisplayField>Specialty__c</errorDisplayField>
    <errorMessage>Speciality is required</errorMessage>
</ValidationRule>